--- a/templates/form.html
+++ b/templates/form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Roommate Application Form</title>
+    <title>Personal Emotion Measurement Form</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
@@ -98,6 +98,8 @@
       button:hover {
         background: #ff0066;
       }
+
+
       @media (min-width: 568px) {
       .name-item, .contact-item {
         display: flex;
@@ -134,7 +136,7 @@
 
         <div class="item">
           <p>Emotion Sentence</p>
-          <textarea name="roommate" placeholder="I love Code" rows="3" required></textarea>
+          <textarea name="sentence" placeholder="I love Code" rows="3" required></textarea>
         </div>
         <div class="btn-block">
           <button type="submit" href="/">APPLY</button>
