--- a/templates/results.html
+++ b/templates/results.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Personal Emotion Measurement Form</title>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Sonuç Sayfası</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-
     <style>
       html, body {
         min-height: 100%;
@@ -41,7 +41,7 @@
       }
       .banner {
         position: relative;
-        height: 210px;
+        height: 700px;
         background-image: url("https://c4.wallpaperflare.com/wallpaper/31/105/276/retrowave-synthwave-neon-ultrawide-wallpaper-preview.jpg");
         background-size: cover;
         display: flex;
@@ -78,8 +78,11 @@
         color: #cc0052;
       }
       .item {
-        position: relative;
-        margin: 10px 0;
+          position: relative;
+          argin: 10px 0;
+          justify-content: center;
+          align-items: center;
+          text-align: center;
       }
       .btn-block {
         margin-top: 10px;
@@ -98,8 +101,6 @@
       button:hover {
         background: #ff0066;
       }
-
-
       @media (min-width: 568px) {
       .name-item, .contact-item {
         display: flex;
@@ -116,32 +117,48 @@
         width: calc(100% - 12px);
       }
       }
+
+      .myButton {
+            box-shadow: 3px 4px 0px 0px #899599;
+            background:linear-gradient(to bottom, #ededed 5%, #bab1ba 100%);
+            background-color:#ededed;
+            border-radius:15px;
+            border:1px solid #d6bcd6;
+            display:inline-block;
+            cursor:pointer;
+            color:#3a8a9e;
+            font-family:Arial;
+            font-size:17px;
+            padding:7px 25px;
+            text-decoration:none;
+            text-shadow:0px 1px 0px #e1e2ed;
+      }
+      .myButton:hover {
+            background:linear-gradient(to bottom, #bab1ba 5%, #ededed 100%);
+            background-color:#bab1ba;
+      }
+      .myButton:active {
+            position:relative;
+            top:1px;
+      }
+
+
     </style>
 
-  </head>
-  <body>
+</head>
+<body>
     <div class="testbox">
-      <form action="/" method="POST">
-        <div class="banner">
-          <h1> Personal Emotion Measurement Form</h1>
-        </div>
+        <form action="/results/">
+            <a class="myButton" href="/{{ path }}">See All</a>
+            <div class="banner">
+                <h1>{{text}}   {{ data }}</h1>
+            </div>
+            <div class="item">
+                <p>Name</p>
+                <h2>{{ data }}</h2>
+            </div>
+        </form>
 
-        <div class="item">
-          <p>Name</p>
-          <div class="name-item">
-            <input type="text" name="name" placeholder="First" />
-            <input type="text" name="surname" placeholder="Last" />
-          </div>
-        </div>
-
-        <div class="item">
-          <p>Emotion Sentence</p>
-          <textarea name="sentence" placeholder="I love Code" rows="3" required></textarea>
-        </div>
-        <div class="btn-block">
-          <button type="submit" href="/">APPLY</button>
-        </div>
-      </form>
     </div>
-  </body>
+</body>
 </html>
